--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Marvel HTML Bootstrap 4 Template</title>
+    <title>Zaki's Portofolio Site</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
@@ -29,7 +29,7 @@ https://www.tooplate.com/view/2115-marvel
     <!-- MENU -->
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i> Marvel</a>
+            <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i>Muhamad Zaki</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -77,13 +77,18 @@ https://www.tooplate.com/view/2115-marvel
                         <h1 class="animated animated-text">
                             <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">Marvel Sann</span>
-                                    <span class="animated-item">Web Designer</span>
-                                    <span class="animated-item">UI Specialist</span>
+                                    <span class="animated-item">Muhamad Zaki</span>
+                                    <span class="animated-item">IT Support Specialist</span>
+                                    <span class="animated-item">DevOps Enthusiast</span>
                                 </div>
                         </h1>
 
-                        <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
+                            <ul>
+                              <li>🔧 I work in IT support, Network & System administration.</li>
+                              <li>🚀 Passionate about Linux, CyberSecurity, Cloud, and DevOps.</li>
+                              <li>🔍 Always learning — currently diving into DevOps and Cloud infrastructure.</li>
+                              <li>📬 Let’s collaborate on meaningful tech projects!</li>
+                            </ul>
                         
                         <div class="custom-btn-group mt-4">
                           <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
@@ -110,7 +115,7 @@ https://www.tooplate.com/view/2115-marvel
                   <div class="col-lg-11 text-center mx-auto col-12">
 
                       <div class="col-lg-8 mx-auto">
-                        <h2>Things I have designed for digital media agencies</h2>
+                        <h2>Projects I have done for study, work, and knowledge</h2>
                       </div>
 
                       <div class="owl-carousel owl-theme">
